--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,12 @@
 <header class="header">
-  <h1>Partizan sampion</h1>
+  <div class="menu-container">
+    <select class="dropdown-menu">
+      <option value="istorija">Istorija</option>
+      <option value="titule">Titule</option>
+      <option value="igraci">Igrači</option>
+    </select>
+  </div>
+  <div class="title-container">
+    <h1>KK Partizan Beograd</h1>
+  </div>
 </header>
